force-app/main/default/objects/Opportunity/fields/MEDDPICC_Champion__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Champion__c</fullName>
    <description>MEDDPICC Champion: An internal advocate at the customer who promotes your solution. Document who they are, their influence, motivation, and how they're helping advance the deal.</description>
    <inlineHelpText>Who is your internal advocate? Document their name, role, influence level, personal motivation, and how they're actively supporting your solution.</inlineHelpText>
    <label>MEDDPICC: Champion</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>