force-app/main/default/objects/Opportunity/fields/MEDDPICC_Competition__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Competition__c</fullName>
    <description>MEDDPICC Competition: Alternatives the customer is considering, including other vendors, internal builds, or doing nothing (status quo). Document competitive landscape and your differentiation.</description>
    <inlineHelpText>What alternatives is the customer considering? Document competitors, build vs buy options, status quo risk, and how you differentiate against each.</inlineHelpText>
    <label>MEDDPICC: Competition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>