force-app/main/default/objects/Opportunity/fields/MEDDPICC_Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Competition_Score__c</fullName>
    <description>Score for MEDDPICC Competition qualification criteria. 1=Very Weak (strong competition, unclear differentiation), 5=Very Strong (clear advantage over all alternatives).</description>
    <inlineHelpText>Rate Competitive Position: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Competition Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>