force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Criteria__c</fullName>
    <description>MEDDPICC Decision Criteria: What factors influence the purchase decision (technical requirements, features, ROI, vendor reputation, integration needs, compliance, etc.).</description>
    <inlineHelpText>What criteria will the customer use to evaluate and select a solution? List technical, business, and political factors.</inlineHelpText>
    <label>MEDDPICC: Decision Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>