force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Criteria_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Criteria_Score__c</fullName>
    <description>Score for MEDDPICC Decision Criteria qualification criteria. 1=Very Weak (unknown criteria), 5=Very Strong (criteria documented and we meet/exceed all).</description>
    <inlineHelpText>Rate understanding of Decision Criteria: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Decision Criteria Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>