force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Process__c</fullName>
    <description>MEDDPICC Decision Process: The formal steps and timeline the customer follows to make a purchase decision. Document approval stages, stakeholders involved, and key milestones.</description>
    <inlineHelpText>What is the customer's formal process for making this purchase decision? Document steps, stakeholders, timeline, and approval requirements.</inlineHelpText>
    <label>MEDDPICC: Decision Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>