force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Process_Score__c</fullName>
    <description>Score for MEDDPICC Decision Process qualification criteria. 1=Very Weak (unknown process), 5=Very Strong (process mapped with dates and we're aligned).</description>
    <inlineHelpText>Rate understanding of Decision Process: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Decision Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>