force-app/main/default/objects/Opportunity/fields/MEDDPICC_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Economic_Buyer__c</fullName>
    <description>MEDDPICC Economic Buyer: The person with final budget authority for this purchase. Document who controls the budget, their role, and your access level to them.</description>
    <inlineHelpText>Who has the final authority to approve the budget for this deal? Document their name, title, and your relationship/access to them.</inlineHelpText>
    <label>MEDDPICC: Economic Buyer</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>