force-app/main/default/objects/Opportunity/fields/MEDDPICC_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Identify_Pain__c</fullName>
    <description>MEDDPICC Identify Pain: The customer's specific business problems that need solving. Document explicit and implicit pains, their impact, and urgency to resolve.</description>
    <inlineHelpText>What specific business problems is the customer trying to solve? Document the pain points, their business impact, and why addressing them is urgent.</inlineHelpText>
    <label>MEDDPICC: Identify Pain</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>