force-app/main/default/objects/Opportunity/fields/MEDDPICC_Identify_Pain_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Identify_Pain_Score__c</fullName>
    <description>Score for MEDDPICC Identify Pain qualification criteria. 1=Very Weak (no pain identified), 5=Very Strong (compelling pain with urgency to act).</description>
    <inlineHelpText>Rate understanding of Customer Pain: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Identify Pain Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>