force-app/main/default/objects/Opportunity/fields/MEDDPICC_Metrics__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Metrics__c</fullName>
    <description>MEDDPICC Metrics: Measurable results and economic benefits your solution provides. Document quantifiable outcomes the customer expects (ROI, cost savings, revenue growth, efficiency gains, time savings).</description>
    <inlineHelpText>What measurable business outcomes will the customer achieve? Include specific numbers, percentages, or dollar amounts where possible.</inlineHelpText>
    <label>MEDDPICC: Metrics</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>