force-app/main/default/objects/Opportunity/fields/MEDDPICC_Metrics_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Metrics_Score__c</fullName>
    <description>Score for MEDDPICC Metrics qualification criteria. 1=Very Weak (no metrics identified), 5=Very Strong (clear, quantified metrics agreed with customer).</description>
    <inlineHelpText>Rate the strength of identified metrics: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Metrics Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>