force-app/main/default/objects/Opportunity/fields/MEDDPICC_Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Paper_Process__c</fullName>
    <description>MEDDPICC Paper Process: The legal, security, and procurement steps required to finalize the contract. Document legal review, security assessments, procurement requirements, and contract terms.</description>
    <inlineHelpText>What legal, security, and procurement steps are required? Document contract review process, security requirements, vendor onboarding, and expected timeline.</inlineHelpText>
    <label>MEDDPICC: Paper Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>