force-app/main/default/objects/Opportunity/fields/MEDDPICC_Paper_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Paper_Process_Score__c</fullName>
    <description>Score for MEDDPICC Paper Process qualification criteria. 1=Very Weak (unknown process), 5=Very Strong (process understood and no blockers).</description>
    <inlineHelpText>Rate understanding of Paper Process: 1=Very Weak, 2=Weak, 3=Moderate, 4=Strong, 5=Very Strong</inlineHelpText>
    <label>MEDDPICC: Paper Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Weak</fullName>
            </value>
            <value>
                <fullName>2 - Weak</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Very Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>