force-app/main/default/objects/Opportunity/fields/MEDDPICC_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Qualification_Status__c</fullName>
    <description>Overall MEDDPICC qualification status for this opportunity. Set based on the strength of all MEDDPICC criteria.</description>
    <inlineHelpText>Overall qualification status based on MEDDPICC assessment. Qualified deals have strong scores across most criteria.</inlineHelpText>
    <label>MEDDPICC: Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Assessed</fullName>
                <default>true</default>
                <label>Not Assessed</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>